- remove extra image params - tweak some javascript - add image constraints - fix blurring issue on feature category hover - add fill to maintenance page svgs - add header image dimensions in checkout settings - fix product hover transition - remove some defaults

--- a/source/stylesheets/layout.css.sass
+++ b/source/stylesheets/layout.css.sass
@@ -53,12 +53,17 @@ body
             padding: 0 6px
           
           svg
+            +all-transitions
+            fill: $primary-text-color
             height: 30px
             width: 30px
             
             @media screen and (max-width: $break-small)
               height: 26px
               width: 26px
+              
+          &:hover svg
+            opacity: .8 
   
 header
   +pie-clearfix
